Update tests so you can run on a certain file type.

--- a/package.json
+++ b/package.json
@@ -143,6 +143,27 @@
     "test:dist-standalone": "cross-env NODE_ENV=production TEST_STANDALONE=1 jest",
     "test:integration": "jest tests/integration",
     "test:dist-lint": "eslint --no-eslintrc --no-ignore --no-inline-config --config=./scripts/bundle-eslint-config.cjs \"dist/**/*.{js,mjs}\"",
+    "test:angular": "jest --testPathPattern=tests/format/angular",
+    "test:css": "jest --testPathPattern=tests/format/css",
+    "test:flow": "jest --testPathPattern=tests/format/flow",
+    "test:flow-repo": "jest --testPathPattern=tests/format/flow-repo",
+    "test:graphql": "jest --testPathPattern=tests/format/graphql",
+    "test:handlebars": "jest --testPathPattern=tests/format/handlebars",
+    "test:html": "jest --testPathPattern=tests/format/html",
+    "test:js": "jest --testPathPattern=tests/format/js",
+    "test:json": "jest --testPathPattern=tests/format/json",
+    "test:jsx": "jest --testPathPattern=tests/format/jsx",
+    "test:less": "jest --testPathPattern=tests/format/less",
+    "test:lwc": "jest --testPathPattern=tests/format/lwc",
+    "test:markdown": "jest --testPathPattern=tests/format/markdown",
+    "test:mdx": "jest --testPathPattern=tests/format/mdx",
+    "test:misc": "jest --testPathPattern=tests/format/misc",
+    "test:mjml": "jest --testPathPattern=tests/format/mjml",
+    "test:scss": "jest --testPathPattern=tests/format/scss",
+    "test:stylefmt-repo": "jest --testPathPattern=tests/format/stylefmt-repo",
+    "test:typescript": "jest --testPathPattern=tests/format/typescript",
+    "test:vue": "jest --testPathPattern=tests/format/vue",
+    "test:yaml": "jest --testPathPattern=tests/format/yaml",
     "perf:repeat": "yarn && yarn build && cross-env NODE_ENV=production node ./dist/bin-prettier.js --debug-repeat ${PERF_REPEAT:-1000} --loglevel debug ${PERF_FILE:-./index.js} > /dev/null",
     "perf:repeat-inspect": "yarn && yarn build && cross-env NODE_ENV=production node --inspect-brk ./dist/bin-prettier.js --debug-repeat ${PERF_REPEAT:-1000} --loglevel debug ${PERF_FILE:-./index.js} > /dev/null",
     "perf:benchmark": "yarn && yarn build && cross-env NODE_ENV=production node ./dist/bin-prettier.js --debug-benchmark --loglevel debug ${PERF_FILE:-./index.js} > /dev/null",
