Run tests on Node.js v18

--- a/.github/workflows/dev-test.yml
+++ b/.github/workflows/dev-test.yml
@@ -18,20 +18,21 @@ jobs:
           - "macos-latest"
           - "windows-latest"
         node:
+          - "18"
           - "16"
           - "14"
         include:
           # only enable coverage on the fastest job
           - os: "ubuntu-latest"
-            node: "16"
+            node: "18"
             ENABLE_CODE_COVERAGE: true
             FULL_TEST: true
             CHECK_TEST_PARSERS: true
-        # exclude:
-        #   - os: "macos-latest"
-        #     node: "14"
-        #   - os: "windows-latest"
-        #     node: "14"
+        exclude:
+          - os: "macos-latest"
+            node: "16"
+          - os: "windows-latest"
+            node: "16"
     env:
       ENABLE_CODE_COVERAGE: ${{ matrix.ENABLE_CODE_COVERAGE }}
       FULL_TEST: ${{ matrix.FULL_TEST }}
