--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -45,30 +45,30 @@ jobs:
       - name: Lint workflow files
         run: yarn lint:actionlint
 
-      - name: Run yarn install (/)
+      - name: Run yarn (/)
         run: |
           yarn
           yarn dedupe --check
 
-      - name: Run yarn install (/website)
+      - name: Run yarn (/website)
         run: |
           yarn
           yarn dedupe --check
         working-directory: website
 
-      - name: Run yarn install (/scripts/release)
+      - name: Run yarn (/scripts/release)
         run: |
           yarn
           yarn dedupe --check
         working-directory: scripts/release
 
-      - name: Run yarn install (/scripts/tools/bundle-test)
+      - name: Run yarn (/scripts/tools/bundle-test)
         run: |
           yarn
           yarn dedupe --check
         working-directory: scripts/tools/bundle-test
 
-      - name: Run yarn install (/scripts/tools/eslint-plugin-prettier-internal-rules)
+      - name: Run yarn (/scripts/tools/eslint-plugin-prettier-internal-rules)
         run: |
           yarn
           yarn dedupe --check
