--- a/.github/workflows/prod-test.yml
+++ b/.github/workflows/prod-test.yml
@@ -22,7 +22,7 @@ jobs:
           cache: "yarn"
 
       - name: Install Dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install --immutable
 
       - name: Build Package
         run: yarn build
@@ -47,7 +47,7 @@ jobs:
           cache: "yarn"
 
       - name: Install Dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install --immutable
 
       - name: Download Artifact
         uses: actions/download-artifact@v3
@@ -100,12 +100,8 @@ jobs:
           node-version: ${{ matrix.node }}
           cache: "yarn"
 
-      - name: Config `ignore-engines=true` (Node.js < 14)
-        if: ${{ matrix.node == '12' }}
-        run: yarn config set ignore-engines true
-
       - name: Install Dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install --immutable
 
       - name: Download Artifact
         uses: actions/download-artifact@v3
