--- a/.github/workflows/dev-test.yml
+++ b/.github/workflows/dev-test.yml
@@ -51,7 +51,7 @@ jobs:
           cache: "yarn"
 
       - name: Install Dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install --immutable
 
       # - name: Run Integration Tests (macOS)
       #   if: ${{ matrix.os == 'macos-latest' }}
