--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -22,7 +22,7 @@ jobs:
           cache: "yarn"
 
       - name: Install Dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install --immutable
 
       - name: Check Dependencies
         run: yarn lint:deps
@@ -45,5 +45,34 @@ jobs:
       - name: Lint workflow files
         run: yarn lint:actionlint
 
-      - name: Check Lock File Changes
-        run: yarn && echo "Listing changed files:" && git diff --name-only --exit-code && echo "No files changed during lint."
+      - name: Run yarn (/)
+        run: |
+          yarn
+          yarn dedupe --check
+
+      - name: Run yarn (/website)
+        run: |
+          yarn
+          yarn dedupe --check
+        working-directory: website
+
+      - name: Run yarn (/scripts/release)
+        run: |
+          yarn
+          yarn dedupe --check
+        working-directory: scripts/release
+
+      - name: Run yarn (/scripts/tools/bundle-test)
+        run: |
+          yarn
+          yarn dedupe --check
+        working-directory: scripts/tools/bundle-test
+
+      - name: Run yarn (/scripts/tools/eslint-plugin-prettier-internal-rules)
+        run: |
+          yarn
+          yarn dedupe --check
+        working-directory: scripts/tools/eslint-plugin-prettier-internal-rules
+
+      - name: Check File Changes
+        run: echo "Listing changed files:" && git diff --name-only --exit-code && echo "No files changed during lint."
