--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "remark-math": "3.0.1",
     "remark-parse": "8.0.3",
     "resolve": "1.22.0",
+    "sdbm": "2.0.0",
     "semver": "7.3.7",
     "string-width": "5.0.1",
     "strip-ansi": "7.0.1",
