--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -2,6 +2,5 @@
   $schema: "https://docs.renovatebot.com/renovate-schema.json",
   labels: ["scope:dependency"],
   baseBranches: ["next"],
-  // TODO: enable this
-  // schedule: ["after 01:00 on sunday"],
+  schedule: ["after 01:00 on sunday"],
 }
