--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "semver": "7.3.7",
     "string-width": "5.0.1",
     "strip-ansi": "7.0.1",
-    "typescript": "4.6.3",
+    "typescript": "4.7.1-rc",
     "unicode-regex": "3.0.0",
     "unified": "9.2.1",
     "vnopts": "1.0.2",
