--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "esutils": "2.0.3",
     "fast-glob": "3.2.11",
     "fast-json-stable-stringify": "2.1.0",
+    "file-entry-cache": "6.0.1",
+    "find-cache-dir": "3.3.2",
     "find-parent-dir": "0.3.1",
     "flow-parser": "0.180.0",
     "get-stdin": "8.0.0",
@@ -79,6 +81,7 @@
     "remark-math": "3.0.1",
     "remark-parse": "8.0.3",
     "resolve": "1.22.0",
+    "sdbm": "2.0.0",
     "semver": "7.3.7",
     "string-width": "5.0.1",
     "strip-ansi": "7.0.1",
@@ -96,6 +99,8 @@
     "@esbuild-plugins/node-modules-polyfill": "0.1.4",
     "@glimmer/reference": "0.84.2",
     "@types/estree": "0.0.51",
+    "@types/file-entry-cache": "5.0.2",
+    "@types/find-cache-dir": "3.2.1",
     "@types/jest": "27.4.1",
     "@typescript-eslint/eslint-plugin": "5.20.0",
     "babel-jest": "27.5.1",
