--- a/.github/workflows/dev-package-test.yml
+++ b/.github/workflows/dev-package-test.yml
@@ -50,4 +50,4 @@ jobs:
         run: npm install --global pnpm
 
       - name: Run Tests
-        run: yarn test:dev-package --maxWorkers=2
+        run: yarn test:dev-package
