--- a/.github/workflows/prod-test.yml
+++ b/.github/workflows/prod-test.yml
@@ -104,21 +104,11 @@ jobs:
           name: dist
           path: dist
 
-      - name: Run Tests (macOS)
-        if: ${{ matrix.os == 'macos-latest' }}
-        run: yarn test:dist --maxWorkers=4
+      - name: Run Tests
+        run: yarn test:dist
 
-      - name: Run Tests (Linux and Windows)
-        if: ${{ matrix.os != 'macos-latest' }}
-        run: yarn test:dist --maxWorkers=2
-
-      - name: Run Format Tests (standalone) (macOS)
-        if: ${{ matrix.os == 'macos-latest' }}
-        run: yarn test:dist-standalone --maxWorkers=4
-
-      - name: Run Format Tests (standalone) (Linux and Windows)
-        if: ${{ matrix.os != 'macos-latest' }}
-        run: yarn test:dist-standalone --maxWorkers=2
+      - name: Run Format Tests (standalone)
+        run: yarn test:dist-standalone
 
       # #8073 test
       - name: Run Tests (PRETTIER_FALLBACK_RESOLVE)
