--- a/.prettierignore
+++ b/.prettierignore
@@ -6,6 +6,15 @@ coverage/
 !/tests/format/**/jsfmt.spec.js
 /tests/integration/cli/
 /tests/integration/plugins/
+!tests/integration/plugins/automatic/node_modules/@user/prettier-plugin-foobar/index.js
+!tests/integration/plugins/automatic/node_modules/prettier-plugin-bar/index.js
+!tests/integration/plugins/automatic/prettier-plugin-bar.js
+!tests/integration/plugins/defaultOptions/plugin.cjs
+!tests/integration/plugins/extensions/plugin.cjs
+!tests/integration/plugins/flushLineSuffix/plugin.cjs
+!tests/integration/plugins/options-string/plugin.cjs
+!tests/integration/plugins/options/plugin.cjs
+!tests/integration/plugins/preprocess/plugin.cjs
 /tests/integration/custom-parsers/
 /website/build/
 /website/static/lib/
