--- a/package.json
+++ b/package.json
@@ -123,7 +123,7 @@
     "esm-utils": "4.0.0",
     "execa": "6.1.0",
     "jest": "28.1.0",
-    "jest-light-runner": "0.2.2",
+    "jest-light-runner": "fisker/jest-light-runner#fix-addSnapshotSerializer",
     "jest-snapshot-serializer-ansi": "1.0.0",
     "jest-snapshot-serializer-raw": "1.2.0",
     "jest-watch-typeahead": "1.1.0",
