--- a/.github/workflows/dev-test.yml
+++ b/.github/workflows/dev-test.yml
@@ -53,17 +53,13 @@ jobs:
       - name: Install Dependencies
         run: yarn install --immutable
 
-      - name: Run Tests (macOS)
-        if: ${{ matrix.os == 'macos-latest' }}
-        run: yarn test --maxWorkers=4
-
-      - name: Run Tests (Linux and Windows)
-        if: ${{ matrix.os != 'macos-latest' && !matrix.ENABLE_CODE_COVERAGE }}
-        run: yarn test --maxWorkers=2
+      - name: Run Tests
+        if: ${{ !matrix.ENABLE_CODE_COVERAGE }}
+        run: yarn test
 
       - name: Run Tests (coverage)
         if: ${{ matrix.ENABLE_CODE_COVERAGE }}
-        run: yarn c8 test --maxWorkers=2
+        run: yarn c8 test
 
       - name: Run Tests
         run: yarn c8 yarn test
@@ -77,13 +73,7 @@ jobs:
       # #8073 test
       - name: Run Tests (PRETTIER_FALLBACK_RESOLVE)
         if: ${{ !matrix.ENABLE_CODE_COVERAGE }}
-        run: yarn test "tests/integration/__tests__/(config|plugin)"
-        env:
-          PRETTIER_FALLBACK_RESOLVE: true
-
-      - name: Run Tests (PRETTIER_FALLBACK_RESOLVE, coverage)
-        if: ${{ matrix.ENABLE_CODE_COVERAGE }}
-        run: yarn test "tests/integration/__tests__/(config|plugin)"
+        run: yarn c8 test "tests/integration/__tests__/(config|plugin)"
         env:
           PRETTIER_FALLBACK_RESOLVE: true
 
