--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "html-tag-names": "2.0.1",
     "html-void-elements": "2.0.1",
     "ignore": "5.2.0",
+    "import-meta-resolve": "2.0.3",
     "jest-docblock": "28.1.1",
     "json5": "2.2.1",
     "leven": "4.0.0",
