--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ package-lock.json
 .pnp.*
 .nyc_output
 .devcontainer
+*.tgz
 
 # Temporarily ignore these files to avoid conflicts between next and main branch
 /vendors
