--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "eslint-plugin-compat": "4.0.2",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jest": "26.6.0",
+    "eslint-plugin-n": "15.2.4",
     "eslint-plugin-prettier-internal-rules": "2.0.1",
     "eslint-plugin-react": "7.30.1",
     "eslint-plugin-regexp": "1.7.0",
