Add benchmark script (#13224)
Co-authored-by: fisker <lionkay@gmail.com>

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,8 +2,8 @@
 
 tasks:
   - init: |
+      brew install hyperfine
       yarn
-      yarn build
 
 github:
   # https://www.gitpod.io/docs/prebuilds/#configure-prebuilds
