--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "acorn-jsx": "5.3.2",
     "angular-estree-parser": "2.5.1",
     "angular-html-parser": "1.8.0",
+    "babel-types": "6.26.0",
     "camelcase": "7.0.0",
     "chalk": "5.0.1",
     "ci-info": "3.3.2",
