--- a/package.json
+++ b/package.json
@@ -124,7 +124,7 @@
     "esm-utils": "4.0.0",
     "execa": "6.1.0",
     "jest": "28.1.0",
-    "jest-light-runner": "fisker/jest-light-runner#b5e893d3a7d301bfb5d68ed81eebadbe2bb0577d",
+    "jest-light-runner": "0.3.0",
     "jest-snapshot-serializer-ansi": "1.0.0",
     "jest-snapshot-serializer-raw": "1.2.0",
     "jest-watch-typeahead": "2.0.0",
