--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@angular/compiler": "12.2.16",
     "@babel/code-frame": "7.18.6",
     "@babel/parser": "7.18.11",
+    "@babel/types": "7.18.10",
     "@glimmer/syntax": "0.84.2",
     "@iarna/toml": "2.2.5",
     "@typescript-eslint/typescript-estree": "5.33.0",
+    "@typescript-eslint/visitor-keys": "5.33.0",
     "acorn": "8.8.0",
     "acorn-jsx": "5.3.2",
     "angular-estree-parser": "2.5.1",
@@ -86,6 +88,7 @@
     "semver": "7.3.7",
     "string-width": "5.0.1",
     "strip-ansi": "7.0.1",
+    "to-fast-properties": "4.0.0",
     "typescript": "4.7.4",
     "unicode-regex": "3.0.0",
     "unified": "9.2.2",
@@ -94,7 +97,6 @@
     "yaml-unist-parser": "1.3.1"
   },
   "devDependencies": {
-    "@babel/types": "7.18.10",
     "@esbuild-plugins/node-modules-polyfill": "0.1.4",
     "@glimmer/reference": "0.84.2",
     "@types/estree": "1.0.0",
