--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "minimist": "1.2.8",
     "n-readlines": "1.0.1",
     "outdent": "0.8.0",
+    "oxc-parser": "0.51.0",
     "parse-json": "8.3.0",
     "picocolors": "1.1.1",
     "please-upgrade-node": "3.2.0",
