--- a/package.json
+++ b/package.json
@@ -132,7 +132,6 @@
     "eslint-plugin-simple-import-sort": "12.1.1",
     "eslint-plugin-unicorn": "57.0.0",
     "esm-utils": "4.3.0",
-    "execa": "7.2.0",
     "globals": "16.0.0",
     "jest": "30.0.0-alpha.7",
     "jest-light-runner": "0.6.0",
@@ -141,6 +140,7 @@
     "jest-watch-typeahead": "2.2.2",
     "knip": "5.44.4",
     "magic-string": "0.30.17",
+    "nano-spawn": "0.2.0",
     "node-style-text": "0.0.7",
     "npm-run-all2": "7.0.2",
     "prettier": "3.5.2",
