--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
   },
   "devDependencies": {
     "@babel/generator": "7.26.9",
+    "@eslint-react/eslint-plugin": "1.27.0",
     "@eslint/js": "9.21.0",
     "@stylistic/eslint-plugin-js": "4.0.1",
     "@types/estree": "1.0.6",
@@ -127,7 +128,6 @@
     "eslint-plugin-compat": "6.0.2",
     "eslint-plugin-jest": "28.11.0",
     "eslint-plugin-n": "17.15.1",
-    "eslint-plugin-react": "7.37.4",
     "eslint-plugin-regexp": "2.7.0",
     "eslint-plugin-simple-import-sort": "12.1.1",
     "eslint-plugin-unicorn": "57.0.0",
