Use Vite to build playground

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@
 /dist*
 /website/build
 /website/i18n
-/website/static/playground.js
+/website/static/playground
 /website/static/lib
 /website/.docusaurus
 .DS_Store
