--- a/package.json
+++ b/package.json
@@ -112,7 +112,6 @@
     "@stylistic/eslint-plugin-js": "4.0.1",
     "@types/estree": "1.0.6",
     "@typescript-eslint/eslint-plugin": "8.25.0",
-    "benchmark": "2.1.4",
     "browserslist": "4.24.4",
     "browserslist-to-esbuild": "2.1.1",
     "c8": "10.1.3",
@@ -150,6 +149,7 @@
     "serialize-javascript": "6.0.2",
     "snapshot-diff": "0.10.0",
     "tempy": "3.1.0",
+    "tinybench": "3.1.1",
     "ts-expect": "1.3.0"
   },
   "resolutions": {
