--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prettier",
-  "version": "3.5.3",
+  "version": "3.6.0-dev",
   "description": "Prettier is an opinionated code formatter",
   "bin": "./bin/prettier.cjs",
   "repository": "prettier/prettier",
@@ -143,7 +143,7 @@
     "magic-string": "0.30.17",
     "node-style-text": "0.0.7",
     "npm-run-all2": "7.0.2",
-    "prettier": "3.5.2",
+    "prettier": "3.5.3",
     "pretty-bytes": "6.1.1",
     "rollup-plugin-license": "3.6.0",
     "semver": "7.7.1",
