--- a/package.json
+++ b/package.json
@@ -166,7 +166,7 @@
     "perf:inspect": "yarn && yarn build && cross-env NODE_ENV=production node --inspect-brk ./dist/bin/prettier.cjs",
     "perf:benchmark": "yarn perf --debug-benchmark",
     "perf:compare": "./scripts/benchmark/compare.sh",
-    "lint": "run-p \"lint:*\"",
+    "lint": "run-p --continue-on-error \"lint:*\"",
     "lint:typecheck": "tsc",
     "lint:eslint": "cross-env EFF_NO_LINK_RULES=true eslint . --format friendly",
     "lint:changelog": "node ./scripts/lint-changelog.js",
@@ -175,7 +175,7 @@
     "lint:deps": "node ./scripts/check-deps.js",
     "lint:knip": "knip",
     "lint:format-test": "node ./scripts/format-test-lint.js",
-    "fix": "run-s fix:eslint fix:prettier",
+    "fix": "run-s --continue-on-error fix:eslint fix:prettier",
     "fix:eslint": "yarn lint:eslint --fix",
     "fix:prettier": "yarn lint:prettier --write",
     "build": "node ./scripts/build/build.js",
