Replace `chalk` with `picocolors`

--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "angular-estree-parser": "10.2.0",
     "angular-html-parser": "8.0.1",
     "camelcase": "8.0.0",
-    "chalk": "5.4.1",
     "ci-info": "4.1.0",
     "cjk-regex": "3.2.1",
     "collapse-white-space": "1.0.6",
@@ -82,6 +81,7 @@
     "n-readlines": "1.0.1",
     "outdent": "0.8.0",
     "parse-json": "8.1.0",
+    "picocolors": "1.1.1",
     "please-upgrade-node": "3.2.0",
     "postcss": "8.5.3",
     "postcss-less": "6.0.0",
