--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "@babel/parser": "7.26.10",
     "@babel/types": "7.26.10",
     "@glimmer/syntax": "0.94.8",
-    "@prettier/is-es5-identifier-name": "0.2.0",
     "@prettier/parse-srcset": "3.1.0",
     "@typescript-eslint/typescript-estree": "8.25.0",
     "@typescript-eslint/visitor-keys": "8.25.0",
@@ -68,6 +67,7 @@
     "html-ua-styles": "0.0.8",
     "ignore": "7.0.3",
     "import-meta-resolve": "4.1.0",
+    "is-es5-identifier-name": "1.0.0",
     "iterate-directory-up": "1.1.1",
     "jest-docblock": "30.0.0-alpha.7",
     "js-yaml": "4.1.0",
