--- a/website/data/editors.yml
+++ b/website/data/editors.yml
@@ -12,6 +12,7 @@
   name: Nova
   content: |
     [`Prettier`](https://extensions.panic.com/extensions/alexanderweiss/alexanderweiss.prettier)
+    [`Prettier+`](https://extensions.panic.com/extensions/stonerl/stonerl.prettier/)
 - image: /images/editors/editor_sublime.svg
   name: Sublime Text
   content: |
