--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "fast-glob": "3.3.3",
     "fast-json-stable-stringify": "2.1.0",
     "file-entry-cache": "10.0.8",
-    "find-cache-dir": "5.0.0",
+    "find-cache-directory": "6.0.0",
     "flow-parser": "0.266.1",
     "get-east-asian-width": "1.3.0",
     "get-stdin": "9.0.0",
