Replace `lines-and-columns` with `index-to-position` (#17325)

--- a/package.json
+++ b/package.json
@@ -132,13 +132,13 @@
     "eslint-plugin-unicorn": "58.0.0",
     "esm-utils": "4.3.0",
     "globals": "16.0.0",
+    "index-to-position": "1.1.0",
     "jest": "30.0.0-alpha.7",
     "jest-light-runner": "0.6.0",
     "jest-snapshot-serializer-ansi": "2.2.1",
     "jest-snapshot-serializer-raw": "2.0.0",
     "jest-watch-typeahead": "2.2.2",
     "knip": "5.47.0",
-    "lines-and-columns": "2.0.4",
     "magic-string": "0.30.17",
     "nano-spawn": "0.2.0",
     "node-style-text": "0.0.7",
