--- a/package.json
+++ b/package.json
@@ -162,9 +162,9 @@
     "test:dev-package": "cross-env INSTALL_PACKAGE=1 yarn test",
     "test:dist": "cross-env NODE_ENV=production yarn test",
     "test:dist-standalone": "cross-env TEST_STANDALONE=1 yarn test:dist",
-    "test:dist-lint": "eslint dist --config=./scripts/bundle-eslint-config.js --quiet",
-    "perf": "yarn && yarn build && cross-env NODE_ENV=production node ./dist/bin/prettier.cjs",
-    "perf:inspect": "yarn && yarn build && cross-env NODE_ENV=production node --inspect-brk ./dist/bin/prettier.cjs",
+    "test:dist-lint": "eslint dist/prettier --config=./scripts/bundle-eslint-config.js --quiet --format friendly",
+    "perf": "yarn && yarn build && cross-env NODE_ENV=production node ./dist/prettier/bin/prettier.cjs",
+    "perf:inspect": "yarn && yarn build && cross-env NODE_ENV=production node --inspect-brk ./dist/prettier/bin/prettier.cjs",
     "perf:benchmark": "yarn perf --debug-benchmark",
     "perf:compare": "./scripts/benchmark/compare.sh",
     "lint": "run-p --continue-on-error \"lint:*\"",
