--- a/package.json
+++ b/package.json
@@ -134,7 +134,7 @@
     "globals": "16.0.0",
     "index-to-position": "1.1.0",
     "jest": "30.0.0-alpha.7",
-    "jest-light-runner": "fisker/jest-light-runner#child-process",
+    "jest-light-runner": "nicolo-ribaudo/jest-light-runner#229a40a45f631106539516a8ad2001e8b83a369c",
     "jest-snapshot-serializer-ansi": "2.2.1",
     "jest-snapshot-serializer-raw": "2.0.0",
     "jest-watch-typeahead": "2.2.2",
