--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "@stylistic/eslint-plugin-js": "4.2.0",
     "@types/estree": "1.0.7",
     "@typescript-eslint/eslint-plugin": "8.30.1",
+    "@typescript-eslint/parser": "8.30.1",
     "browserslist": "4.24.4",
     "browserslist-to-esbuild": "2.1.1",
     "c8": "10.1.3",
