--- a/package.json
+++ b/package.json
@@ -134,7 +134,7 @@
     "globals": "16.0.0",
     "index-to-position": "1.1.0",
     "jest": "30.0.0-alpha.7",
-    "jest-light-runner": "nicolo-ribaudo/jest-light-runner#main",
+    "jest-light-runner": "0.7.0",
     "jest-snapshot-serializer-ansi": "2.2.1",
     "jest-snapshot-serializer-raw": "2.0.0",
     "jest-watch-typeahead": "2.2.2",
