Support `--experimental-cli`

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
       "default": "./src/index.js"
     },
     "./standalone": "./src/standalone.js",
+    "./plugins/*.js": "./src/plugins/*",
     "./*": "./*"
   },
   "engines": {
