--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
       "default": "./src/index.js"
     },
     "./standalone": "./src/standalone.js",
-    "./plugins/*.js": "./src/plugins/*",
+    "./plugins/*.js": "./src/plugins/*.js",
     "./*": "./*"
   },
   "engines": {
