Try to enable npm dev package test

--- a/.github/workflows/dev-package-test.yml
+++ b/.github/workflows/dev-package-test.yml
@@ -33,8 +33,7 @@ jobs:
           - "20"
         NPM_CLIENT:
           - "yarn"
-          # Disabled temporarily #13151
-          # - "npm"
+          - "npm"
           - "pnpm"
     env:
       INSTALL_PACKAGE: true
