--- a/.github/workflows/dev-package-test.yml
+++ b/.github/workflows/dev-package-test.yml
@@ -37,7 +37,7 @@ jobs:
           - "pnpm"
     env:
       INSTALL_PACKAGE: true
-      NPM_CLIENT: ${{ matrix.NPM_CLIENT }}
+      PRETTIER_INSTALL_NPM_CLIENT: ${{ matrix.NPM_CLIENT }}
     name: Test with ${{ matrix.NPM_CLIENT }}
     runs-on: ${{ matrix.os }}
     steps:
