--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "c8": "10.1.3",
     "cross-env": "7.0.3",
     "cspell": "8.18.1",
+    "emoji-test-regex-pattern": "2.2.0",
     "enquirer": "2.4.1",
     "esbuild": "0.25.2",
     "esbuild-plugins-node-modules-polyfill": "1.7.0",
