Switch `html-tag-names` to `@prettier/html-tags`

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@babel/types": "7.27.0",
     "@glimmer/syntax": "0.94.9",
     "@prettier/cli": "0.7.1",
+    "@prettier/html-tags": "1.0.0",
     "@prettier/parse-srcset": "3.1.0",
     "@typescript-eslint/typescript-estree": "8.30.1",
     "@typescript-eslint/visitor-keys": "8.30.1",
@@ -64,7 +65,6 @@
     "graphql": "16.10.0",
     "hermes-parser": "0.27.0",
     "html-element-attributes": "3.4.0",
-    "html-tag-names": "2.1.0",
     "html-ua-styles": "0.0.8",
     "ignore": "7.0.3",
     "import-meta-resolve": "4.1.0",
