--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "url-or-path": "2.6.1",
     "vnopts": "2.0.2",
     "wcwidth.js": "2.0.0",
+    "yaml": "1.10.2",
     "yaml-unist-parser": "2.0.5"
   },
   "devDependencies": {
