--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "remark-math": "3.0.1",
     "remark-parse": "8.0.3",
     "sdbm": "2.0.0",
+    "search-closest": "0.0.4",
     "smol-toml": "1.3.4",
     "strip-ansi": "7.1.0",
     "to-fast-properties": "4.0.0",
