--- a/package.json
+++ b/package.json
@@ -69,7 +69,6 @@
     "ignore": "7.0.3",
     "import-meta-resolve": "4.1.0",
     "is-es5-identifier-name": "1.0.0",
-    "iterate-directory-up": "1.1.1",
     "jest-docblock": "30.0.0-alpha.7",
     "js-yaml": "4.1.0",
     "json5": "2.2.3",
@@ -94,6 +93,7 @@
     "remark-math": "3.0.1",
     "remark-parse": "8.0.3",
     "sdbm": "2.0.0",
+    "search-closest": "0.1.1",
     "smol-toml": "1.3.4",
     "strip-ansi": "7.1.0",
     "to-fast-properties": "4.0.0",
@@ -101,7 +101,7 @@
     "typescript": "5.8.3",
     "unicode-regex": "4.1.2",
     "unified": "9.2.2",
-    "url-or-path": "2.3.2",
+    "url-or-path": "2.6.1",
     "vnopts": "2.0.2",
     "wcwidth.js": "2.0.0",
     "yaml-unist-parser": "2.0.5"
