Bundle "Experimental CLI" (#17396)

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
       "require": "./src/index.cjs",
       "default": "./src/index.js"
     },
+    "./standalone": "./src/standalone.js",
+    "./plugins/*": "./src/plugins/*.js",
     "./*": "./*"
   },
   "engines": {
@@ -35,7 +37,7 @@
     "@babel/parser": "7.27.1",
     "@babel/types": "7.27.1",
     "@glimmer/syntax": "0.94.9",
-    "@prettier/cli": "0.7.1",
+    "@prettier/cli": "0.8.0",
     "@prettier/html-tags": "1.0.0",
     "@prettier/parse-srcset": "3.1.0",
     "@typescript-eslint/typescript-estree": "8.30.1",
