--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,9 @@
 overrides:
   - files: "**/*.{js,mjs,cjs}"
     options:
-      parser: meriyah
+      parser: oxc
+      plugins:
+        - ./packages/plugin-oxc/index.js
   - files: "bin/prettier.cjs"
     options:
       trailingComma: none
