Add `oxc` parser (#17472)
Co-authored-by: autofix-ci[bot] <114827586+autofix-ci[bot]@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "html-ua-styles": "0.0.8",
     "ignore": "7.0.4",
     "import-meta-resolve": "4.1.0",
+    "index-to-position": "1.1.0",
     "is-es5-identifier-name": "1.0.0",
     "jest-docblock": "30.0.0-alpha.7",
     "json5": "2.2.3",
@@ -81,6 +82,7 @@
     "minimist": "1.2.8",
     "n-readlines": "1.0.1",
     "outdent": "0.8.0",
+    "oxc-parser": "0.69.0",
     "parse-json": "8.3.0",
     "picocolors": "1.1.1",
     "please-upgrade-node": "3.2.0",
@@ -137,7 +139,6 @@
     "eslint-plugin-unicorn": "59.0.1",
     "esm-utils": "4.4.2",
     "globals": "16.1.0",
-    "index-to-position": "1.1.0",
     "jest": "30.0.0-alpha.7",
     "jest-light-runner": "0.7.8",
     "jest-snapshot-serializer-ansi": "2.2.1",
@@ -150,6 +151,7 @@
     "npm-run-all2": "8.0.3",
     "prettier": "3.5.3",
     "pretty-bytes": "7.0.0",
+    "pretty-ms": "9.2.0",
     "rollup-plugin-license": "3.6.0",
     "semver": "7.7.2",
     "serialize-javascript": "6.0.2",
