--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "@typescript-eslint/parser": "8.32.1",
     "browserslist": "4.24.5",
     "browserslist-to-esbuild": "2.1.1",
+    "buffer": "6.0.3",
     "c8": "10.1.3",
     "cross-env": "7.0.3",
     "cspell": "9.0.0",
