--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -34,7 +34,7 @@
         "eslint",
         "@eslint/*",
         "@eslint-react/eslint-plugin",
-        "@stylistic/eslint-plugin-js",
+        "@stylistic/eslint-plugin",
         "eslint-config-prettier",
         "eslint-plugin-compat",
         "eslint-plugin-jest",
