--- a/package.json
+++ b/package.json
@@ -115,7 +115,7 @@
     "@babel/generator": "7.27.3",
     "@eslint-react/eslint-plugin": "1.50.0",
     "@eslint/js": "9.27.0",
-    "@stylistic/eslint-plugin-js": "4.4.0",
+    "@stylistic/eslint-plugin": "4.4.0",
     "@types/estree": "1.0.7",
     "@typescript-eslint/eslint-plugin": "8.33.0",
     "@typescript-eslint/parser": "8.33.0",
