Markdown: Add support for definition lists
Based on syntax from php-markdown:
https://michelf.ca/projects/php-markdown/extra/#def-list

--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "postcss-selector-parser": "2.2.3",
     "postcss-values-parser": "2.0.1",
     "regexp-util": "2.0.3",
+    "remark-definition-list": "2.0.0",
     "remark-footnotes": "2.0.0",
     "remark-math": "3.0.1",
     "remark-parse": "8.0.3",
