--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
   ],
   "dependencies": {
     "@angular/compiler": "20.0.0",
-    "@babel/code-frame": "8.0.0-alpha.17",
-    "@babel/parser": "8.0.0-alpha.17",
-    "@babel/types": "8.0.0-alpha.17",
+    "@babel/code-frame": "8.0.0-beta.0",
+    "@babel/parser": "8.0.0-beta.0",
+    "@babel/types": "8.0.0-beta.0",
     "@glimmer/syntax": "0.94.9",
     "@prettier/cli": "0.8.0",
     "@prettier/html-tags": "1.0.0",
@@ -112,7 +112,7 @@
     "yaml-unist-parser": "2.0.5"
   },
   "devDependencies": {
-    "@babel/generator": "8.0.0-alpha.17",
+    "@babel/generator": "8.0.0-beta.0",
     "@eslint-react/eslint-plugin": "1.50.0",
     "@eslint/js": "9.27.0",
     "@stylistic/eslint-plugin": "4.4.0",
