--- a/netlify.toml
+++ b/netlify.toml
@@ -7,6 +7,6 @@
   YARN_VERSION = "1.22.22"
 
 [[headers]]
-  for = "/worker.js"
+  for = "/worker.mjs"
   [headers.values]
-  Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-eval'; worker-src 'self' 'https://unpkg.com/'"
+    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-eval'; worker-src 'self' 'https://unpkg.com/'"
