--- a/netlify.toml
+++ b/netlify.toml
@@ -9,4 +9,5 @@
 [[headers]]
   for = "/worker.mjs"
   [headers.values]
+    Access-Control-Allow-Origin = "*"
     Content-Security-Policy = "default-src 'self' unpkg.com; script-src 'self' unpkg.com 'unsafe-eval'; worker-src 'self' unpkg.com"
