--- a/netlify.toml
+++ b/netlify.toml
@@ -6,7 +6,14 @@
   NODE_VERSION = "lts/*"
   YARN_VERSION = "1.22.22"
 
+[[headers]]
+  for = "/playground/"
+  [headers.values]
+    Cross-Origin-Opener-Policy-Report-Only = "same-origin"
+    Cross-Origin-Embedder-Policy-Report-Onl = "require-corp"
+
 # [[headers]]
 #   for = "/worker.mjs"
 #   [headers.values]
 #     Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-eval'"
+
